--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ I am excited to connect with professionals and companies that value innovation a
     </section>
     <section id="projects">
       <p class="section__text__p1">Browse My Education</p>
-      <h1 class="title">Projects</h1>
+      <h1 class="title">Educations</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
@@ -342,9 +342,11 @@ I am excited to connect with professionals and companies that value innovation a
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 Tatiana Sánchez
-        . All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Tatiana Sánchez. All Rights Reserved. 
+        <br>
+        Page developed by <a href="https://kjanuda.github.io/JanudaJK.me/" target="_blank">JK</a>.
+    </p>
     </footer>
     <script src="script.js"></script>
-  </body>
-</html>
+    </body>
+    </html>
